# ssec

./: .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  test.py  test_async.py
docs/src/: conf.py  index.rst
docs/src/_templates/autosummary/: class.rst  module.rst
examples/: async.py  sync.py
src/aiosse/: __init__.py
src/ssec/: common.py  constants.py  event.py  stream.py
